футер, контакты, форма - адаптив

--- a/source/index.html
+++ b/source/index.html
@@ -101,6 +101,8 @@
                   </div>
                 </div>
 
+                <div class="contacts__center-line"><span class="visually-hidden">разделительная полоса</span></div>
+
                 <div class="contacts__right-box">
                   <div class="contacts__phone-box">
                     <b class="contacts__phone">Телефон:</b>
@@ -127,19 +129,22 @@
       <b class="footer__logo">Supergym</b>
       <nav class="footer__navbar nav">
         <ul class="nav__list">
-          <li class="nav__item">
+          <li class="nav__item nav__item--logo">
+            <b class="nav__logo">Supergym</b>
+          </li>
+          <li class="nav__item nav__item--service">
             <a href="#" class="nav__link">Услуги</a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">Абонементы</a>
           </li>
-          <li class="nav__item">
+          <li class="nav__item nav__item--sale">
             <a href="#" class="nav__link">Акции</a>
           </li>
-          <li class="nav__item">
+          <li class="nav__item nav__item--coach">
             <a href="#" class="nav__link">Тренеры</a>
           </li>
-          <li class="nav__item">
+          <li class="nav__item nav__item--schedule">
             <a href="#" class="nav__link">Расписание</a>
           </li>
         </ul>
