--- a/source/index.html
+++ b/source/index.html
@@ -227,88 +227,92 @@
   <section class="coach">
     <div class="coach__wrapper">
       <h2 class="coach__title">Тренеры</h2>
-      <ul class="coach__list">
-        <li class="coach__item hidden">
-          <a href="#" class="coach__link">
-            <picture>
-              <source type="image/webp" srcset="img/coach1-1x.webp 1x, img/coach1-2x.webp 2x">
+      <div class="coach__slider-box">
+        <button type="button" class="coach__slider-btn coach__slider-btn--previous"><span class="visually-hidden">назад</span></button>
+        <button type="button" class="coach__slider-btn coach__slider-btn--next"><span class="visually-hidden">вперед</span></button>
+        <ul class="coach__list">
+          <li class="coach__item coach__item--active">
+            <a href="#" class="coach__link">
+              <picture>
+                <source type="image/webp" srcset="img/coach1-1x.webp 1x, img/coach1-2x.webp 2x">
 
-              <img class="coach__img" src="img/coach1-1x.jpg" srcset="img/coach1-2x.jpg 2x" alt="Тренер">
-            </picture>
+                <img class="coach__img" src="img/coach1-1x.jpg" srcset="img/coach1-2x.jpg 2x" alt="Тренер">
+              </picture>
 
-            <div class="coach__info">
-              <p class="coach__name">Анна Павлова</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </a>
-        </li>
+              <div class="coach__info">
+                <p class="coach__name">Анна Павлова</p>
+                <p class="coach__type">CrossFit</p>
+                <ul class="coach__advantages-list">
+                  <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                  <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                  <li class="coach__advantages-item">Опыт — 6 лет</li>
+                </ul>
+              </div>
+            </a>
+          </li>
 
 
-        <li class="coach__item hidden">
-          <a href="#" class="coach__link">
-            <picture>
-              <source type="image/webp" srcset="img/coach2-1x.webp 1x, img/coach2-2x.webp 2x">
+          <li class="coach__item">
+            <a href="#" class="coach__link">
+              <picture>
+                <source type="image/webp" srcset="img/coach2-1x.webp 1x, img/coach2-2x.webp 2x">
 
-              <img class="coach__img" src="img/coach2-1x.jpg" srcset="img/coach2-2x.jpg 2x" alt="Тренер">
-            </picture>
+                <img class="coach__img" src="img/coach2-1x.jpg" srcset="img/coach2-2x.jpg 2x" alt="Тренер">
+              </picture>
 
-            <div class="coach__info">
-              <p class="coach__name">Алексей Лавров</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </a>
-        </li>
+              <div class="coach__info">
+                <p class="coach__name">Алексей Лавров</p>
+                <p class="coach__type">CrossFit</p>
+                <ul class="coach__advantages-list">
+                  <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                  <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                  <li class="coach__advantages-item">Опыт — 6 лет</li>
+                </ul>
+              </div>
+            </a>
+          </li>
 
-        <li class="coach__item ">
-          <a href="#" class="coach__link">
-            <picture>
-              <source type="image/webp" srcset="img/coach3-1x.webp 1x, img/coach3-2x.webp 2x">
+          <li class="coach__item">
+            <a href="#" class="coach__link">
+              <picture>
+                <source type="image/webp" srcset="img/coach3-1x.webp 1x, img/coach3-2x.webp 2x">
 
-              <img class="coach__img" src="img/coach3-1x.jpg" srcset="img/coach3-2x.jpg 2x" alt="Тренер">
-            </picture>
+                <img class="coach__img" src="img/coach3-1x.jpg" srcset="img/coach3-2x.jpg 2x" alt="Тренер">
+              </picture>
 
-            <div class="coach__info">
-              <p class="coach__name">Александр Пашков</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </a>
-        </li>
+              <div class="coach__info">
+                <p class="coach__name">Александр Пашков</p>
+                <p class="coach__type">CrossFit</p>
+                <ul class="coach__advantages-list">
+                  <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                  <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                  <li class="coach__advantages-item">Опыт — 6 лет</li>
+                </ul>
+              </div>
+            </a>
+          </li>
 
-        <li class="coach__item tablet-hidden">
-          <a href="#" class="coach__link">
-            <picture>
-              <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
+          <li class="coach__item">
+            <a href="#" class="coach__link">
+              <picture>
+                <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
 
-              <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
-            </picture>
+                <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
+              </picture>
 
-            <div class="coach__info">
-              <p class="coach__name">Мария Кетова</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </a>
-        </li>
-      </ul>
+              <div class="coach__info">
+                <p class="coach__name">Мария Кетова</p>
+                <p class="coach__type">CrossFit</p>
+                <ul class="coach__advantages-list">
+                  <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                  <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                  <li class="coach__advantages-item">Опыт — 6 лет</li>
+                </ul>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
 
@@ -465,9 +469,9 @@
         <ul class="feedback__list">
           <li class="feedback__item feedback__item--hidden">
             <picture class="feedback__avatar">
-              <source type="image/webp" srcset="img/feedback-author-avatar1x.webp 1x, img/feedback-author-avatar2x.webp 2x">
+              <source type="image/webp" srcset="../img/feedback-author-avatar1x.webp 1x, ../img/feedback-author-avatar2x.webp 2x">
 
-              <img class="feedback__avatar-img" src="img/feedback-author-avatar1x.jpg" srcset="img/feedback-author-avatar2x.jpg 2x" alt="Аватар">
+              <img class="feedback__avatar-img" src="../img/feedback-author-avatar1x.png" srcset="../img/feedback-author-avatar2x.png 2x" alt="Аватар">
             </picture>
             <div class="feedback__box">
               <b class="feedback__author">Анна</b>
@@ -478,9 +482,9 @@
           </li>
           <li class="feedback__item feedback__item--active">
             <picture class="feedback__avatar">
-              <source type="image/webp" srcset="img/feedback-author-avatar1x.webp 1x, img/feedback-author-avatar2x.webp 2x">
+              <source type="image/webp" srcset="../img/feedback-author-avatar1x.webp 1x, ../img/feedback-author-avatar2x.webp 2x">
 
-              <img class="feedback__avatar-img" src="img/feedback-author-avatar1x.jpg" srcset="img/feedback-author-avatar2x.jpg 2x" alt="Аватар">
+              <img class="feedback__avatar-img" src="../img/feedback-author-avatar1x.png" srcset="../img/feedback-author-avatar2x.png 2x" alt="Аватар">
             </picture>
             <div class="feedback__box">
               <b class="feedback__author">Анна Орлова</b>
@@ -493,9 +497,9 @@
 
           <li class="feedback__item feedback__item--hidden">
             <picture class="feedback__avatar">
-              <source type="image/webp" srcset="img/feedback-author-avatar1x.webp 1x, img/feedback-author-avatar2x.webp 2x">
+              <source type="image/webp" srcset="../img/feedback-author-avatar1x.webp 1x, ../img/feedback-author-avatar2x.webp 2x">
 
-              <img class="feedback__avatar-img" src="img/feedback-author-avatar1x.jpg" srcset="img/feedback-author-avatar2x.jpg 2x" alt="Аватар">
+              <img class="feedback__avatar-img" src="../img/feedback-author-avatar1x.png" srcset="../img/feedback-author-avatar2x.png 2x" alt="Аватар">
             </picture>
             <div class="feedback__box">
               <b class="feedback__author">Анна Орлова</b>
@@ -518,10 +522,10 @@
             <div class="lesson__content">
               <h2 class="lesson__title">БЕСПЛАТНОЕ занятие</h2>
               <form action="#" method="post" class="lesson__form">
-                <label for="name" class="visually-hidden">Имя</label>
-                <input type="text" class="lesson__input lesson__input--name" id="name" placeholder="имя">
-                <label for="phone" class="visually-hidden">Телефон</label>
-                <input type="text" class="lesson__input lesson__input-phone" id="phone" placeholder="телефон">
+                <label for="lesson-name" class="visually-hidden">Имя</label>
+                <input type="text" class="lesson__input lesson__input--name" id="lesson-name" placeholder="имя">
+                <label for="lesson-phone" class="visually-hidden">Телефон</label>
+                <input type="text" class="lesson__input lesson__input-phone" id="lesson-phone" placeholder="телефон">
                 <input type="submit" value="отправить">
               </form>
             </div>
