--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
   <meta name="Description" content="Author: Yuriy Bevov, Category: test work at the internship">
   <title>SuperGym</title>
   <link rel="stylesheet" href="css/style.min.css">
+
 </head>
 <body>
   <div style="display:none">
@@ -463,28 +464,14 @@
   <section class="feedback">
     <div class="feedback__wrapper">
       <h2 class="feedback__title">Отзывы</h2>
-      <div class="feedback__slider-box">
-        <button type="button" class="feedback__slider-btn feedback__slider-btn--previous"><span class="visually-hidden">назад</span></button>
-        <button type="button" class="feedback__slider-btn feedback__slider-btn--next"><span class="visually-hidden">вперед</span></button>
-        <ul class="feedback__list">
-          <li class="feedback__item feedback__item--hidden">
-            <picture class="feedback__avatar">
-              <source type="image/webp" srcset="../img/feedback-author-avatar1x.webp 1x, ../img/feedback-author-avatar2x.webp 2x">
+      <div class="feedback__slider-box swiper-container">
 
-              <img class="feedback__avatar-img" src="../img/feedback-author-avatar1x.png" srcset="../img/feedback-author-avatar2x.png 2x" alt="Аватар">
-            </picture>
-            <div class="feedback__box">
-              <b class="feedback__author">Анна</b>
-              <p class="feedback__text">
-                «Хожу в SuperClub уже больше года.
-              </p>
-            </div>
-          </li>
-          <li class="feedback__item feedback__item--active">
+        <ul class="feedback__list swiper-wrapper">
+          <li class="feedback__item swiper-slide">
             <picture class="feedback__avatar">
-              <source type="image/webp" srcset="../img/feedback-author-avatar1x.webp 1x, ../img/feedback-author-avatar2x.webp 2x">
+              <source type="image/webp" srcset="img/feedback-author-avatar1x.webp 1x, img/feedback-author-avatar2x.webp 2x">
 
-              <img class="feedback__avatar-img" src="../img/feedback-author-avatar1x.png" srcset="../img/feedback-author-avatar2x.png 2x" alt="Аватар">
+              <img class="feedback__avatar-img" src="img/feedback-author-avatar1x.png" srcset="img/feedback-author-avatar2x.png 2x" alt="Аватар">
             </picture>
             <div class="feedback__box">
               <b class="feedback__author">Анна Орлова</b>
@@ -495,20 +482,36 @@
             </div>
           </li>
 
-          <li class="feedback__item feedback__item--hidden">
+          <li class="feedback__item swiper-slide">
             <picture class="feedback__avatar">
-              <source type="image/webp" srcset="../img/feedback-author-avatar1x.webp 1x, ../img/feedback-author-avatar2x.webp 2x">
+              <source type="image/webp" srcset="img/feedback-author-avatar1x.webp 1x, img/feedback-author-avatar2x.webp 2x">
 
-              <img class="feedback__avatar-img" src="../img/feedback-author-avatar1x.png" srcset="../img/feedback-author-avatar2x.png 2x" alt="Аватар">
+              <img class="feedback__avatar-img" src="img/feedback-author-avatar1x.png" srcset="img/feedback-author-avatar2x.png 2x" alt="Аватар">
             </picture>
             <div class="feedback__box">
               <b class="feedback__author">Анна Орлова</b>
               <p class="feedback__text">
-                Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный.
+                «Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный.
                 Зал просторный, даже в вечернее время нет очередей»
               </p>
             </div>
           </li>
+
+          <li class="feedback__item swiper-slide">
+            <picture class="feedback__avatar">
+              <source type="image/webp" srcset="img/feedback-author-avatar1x.webp 1x, img/feedback-author-avatar2x.webp 2x">
+
+              <img class="feedback__avatar-img" src="img/feedback-author-avatar1x.png" srcset="img/feedback-author-avatar2x.png 2x" alt="Аватар">
+            </picture>
+            <div class="feedback__box">
+              <b class="feedback__author">Анна Орлова</b>
+              <p class="feedback__text">
+                «Хожу в SuperClub уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный.
+                Зал просторный, даже в вечернее время нет очередей»
+              </p>
+            </div>
+          </li>
+
         </ul>
       </div>
     </div>
@@ -622,6 +625,9 @@
       </div>
     </div>
   </footer>
+
+  <script src="js/swiper.min.js"></script>
+  <script src="js/vendor.js"></script>
   <script src="js/script.js"></script>
   </body>
 </html>
