--- a/source/index.html
+++ b/source/index.html
@@ -322,19 +322,20 @@
     </div>
   </section>
 
-  <!--<section class="coach">
+ <section class="coach">
+   <div class="coach__title-wrapper">
+     <h2 class="coach__title">Тренеры</h2>
+   </div>
     <div class="coach__wrapper">
-      <h2 class="coach__title">Тренеры</h2>
       <div class="coach__slider-box swiper-container">
+        <div class="coach__slider-wrapper swiper-wrapper">
 
-        <ul class="coach__list swiper-wrapper">
-          <li class="coach__item swiper-slide">
+          <div class="coach__slider-item swiper-slide">
             <picture>
               <source type="image/webp" srcset="img/coach1-1x.webp 1x, img/coach1-2x.webp 2x">
 
               <img class="coach__img" src="img/coach1-1x.jpg" srcset="img/coach1-2x.jpg 2x" alt="Тренер">
             </picture>
-
             <div class="coach__info">
               <p class="coach__name">Анна Павлова</p>
               <p class="coach__type">CrossFit</p>
@@ -344,14 +345,14 @@
                 <li class="coach__advantages-item">Опыт — 6 лет</li>
               </ul>
             </div>
-          </li>
-          <li class="coach__item swiper-slide">
+          </div>
+
+          <div class="coach__slider-item swiper-slide">
             <picture>
               <source type="image/webp" srcset="img/coach2-1x.webp 1x, img/coach2-2x.webp 2x">
 
               <img class="coach__img" src="img/coach2-1x.jpg" srcset="img/coach2-2x.jpg 2x" alt="Тренер">
             </picture>
-
             <div class="coach__info">
               <p class="coach__name">Алексей Лавров</p>
               <p class="coach__type">CrossFit</p>
@@ -361,14 +362,14 @@
                 <li class="coach__advantages-item">Опыт — 6 лет</li>
               </ul>
             </div>
-          </li>
-          <li class="coach__item swiper-slide">
+          </div>
+
+          <div class="coach__slider-item swiper-slide">
             <picture>
               <source type="image/webp" srcset="img/coach3-1x.webp 1x, img/coach3-2x.webp 2x">
 
               <img class="coach__img" src="img/coach3-1x.jpg" srcset="img/coach3-2x.jpg 2x" alt="Тренер">
             </picture>
-
             <div class="coach__info">
               <p class="coach__name">Александр Пашков</p>
               <p class="coach__type">CrossFit</p>
@@ -378,14 +379,14 @@
                 <li class="coach__advantages-item">Опыт — 6 лет</li>
               </ul>
             </div>
-          </li>
-          <li class="coach__item swiper-slide">
+          </div>
+
+          <div class="coach__slider-item swiper-slide">
             <picture>
               <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
 
               <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
             </picture>
-
             <div class="coach__info">
               <p class="coach__name">Мария Кетова</p>
               <p class="coach__type">CrossFit</p>
@@ -395,151 +396,98 @@
                 <li class="coach__advantages-item">Опыт — 6 лет</li>
               </ul>
             </div>
-          </li>
-          <li class="coach__item swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
+          </div>
 
-              <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
-            </picture>
-
-            <div class="coach__info">
-              <p class="coach__name">Мария Кетова</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-          <li class="coach__item swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
-
-              <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
-            </picture>
-
-            <div class="coach__info">
-              <p class="coach__name">Мария Кетова</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-          <li class="coach__item swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
-
-              <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
-            </picture>
-
-            <div class="coach__info">
-              <p class="coach__name">Мария Кетова</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-          <li class="coach__item swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
-
-              <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
-            </picture>
-
-            <div class="coach__info">
-              <p class="coach__name">Мария Кетова</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-          <li class="coach__item swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
-
-              <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
-            </picture>
-
-            <div class="coach__info">
-              <p class="coach__name">Мария Кетова</p>
-              <p class="coach__type">CrossFit</p>
-              <ul class="coach__advantages-list">
-                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
-                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
-                <li class="coach__advantages-item">Опыт — 6 лет</li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-        <div class="coach__btn swiper-button-prev"></div>
-        <div class="coach__btn swiper-button-next"></div>
-      </div>
-    </div>
-  </section>-->
-
-<!--  <section class="coach">
-    <div class="coach__wrapper">
-      <div class="coach__slider-box swiper-container">
-        <div class="coach__slider-wrapper swiper-wrapper">
           <div class="coach__slider-item swiper-slide">
             <picture>
               <source type="image/webp" srcset="img/coach1-1x.webp 1x, img/coach1-2x.webp 2x">
 
               <img class="coach__img" src="img/coach1-1x.jpg" srcset="img/coach1-2x.jpg 2x" alt="Тренер">
             </picture>
+            <div class="coach__info">
+              <p class="coach__name">Анна Павлова</p>
+              <p class="coach__type">CrossFit</p>
+              <ul class="coach__advantages-list">
+                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                <li class="coach__advantages-item">Опыт — 6 лет</li>
+              </ul>
+            </div>
           </div>
-          <div class="coach__slider-item swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="img/coach2-1x.webp 1x, img/coach2-2x.webp 2x">
 
-              <img class="coach__img" src="img/coach2-1x.jpg" srcset="img/coach2-2x.jpg 2x" alt="Тренер">
-            </picture>
-          </div>
-          <div class="coach__slider-item swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="img/coach3-1x.webp 1x, img/coach3-2x.webp 2x">
-
-              <img class="coach__img" src="img/coach3-1x.jpg" srcset="img/coach3-2x.jpg 2x" alt="Тренер">
-            </picture>
-          </div>
-          <div class="coach__slider-item swiper-slide">
-            <picture>
-              <source type="image/webp" srcset="img/coach4-1x.webp 1x, img/coach4-2x.webp 2x">
-
-              <img class="coach__img" src="img/coach4-1x.jpg" srcset="img/coach4-2x.jpg 2x" alt="Тренер">
-            </picture>
-          </div>
           <div class="coach__slider-item swiper-slide">
             <picture>
               <source type="image/webp" srcset="img/coach1-1x.webp 1x, img/coach1-2x.webp 2x">
 
               <img class="coach__img" src="img/coach1-1x.jpg" srcset="img/coach1-2x.jpg 2x" alt="Тренер">
             </picture>
+            <div class="coach__info">
+              <p class="coach__name">Анна Павлова</p>
+              <p class="coach__type">CrossFit</p>
+              <ul class="coach__advantages-list">
+                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                <li class="coach__advantages-item">Опыт — 6 лет</li>
+              </ul>
+            </div>
           </div>
+
           <div class="coach__slider-item swiper-slide">
             <picture>
               <source type="image/webp" srcset="img/coach1-1x.webp 1x, img/coach1-2x.webp 2x">
 
               <img class="coach__img" src="img/coach1-1x.jpg" srcset="img/coach1-2x.jpg 2x" alt="Тренер">
             </picture>
+            <div class="coach__info">
+              <p class="coach__name">Анна Павлова</p>
+              <p class="coach__type">CrossFit</p>
+              <ul class="coach__advantages-list">
+                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                <li class="coach__advantages-item">Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="coach__slider-item swiper-slide">
+            <picture>
+              <source type="image/webp" srcset="img/coach1-1x.webp 1x, img/coach1-2x.webp 2x">
+
+              <img class="coach__img" src="img/coach1-1x.jpg" srcset="img/coach1-2x.jpg 2x" alt="Тренер">
+            </picture>
+            <div class="coach__info">
+              <p class="coach__name">Анна Павлова</p>
+              <p class="coach__type">CrossFit</p>
+              <ul class="coach__advantages-list">
+                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                <li class="coach__advantages-item">Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="coach__slider-item swiper-slide">
+            <picture>
+              <source type="image/webp" srcset="img/coach1-1x.webp 1x, img/coach1-2x.webp 2x">
+
+              <img class="coach__img" src="img/coach1-1x.jpg" srcset="img/coach1-2x.jpg 2x" alt="Тренер">
+            </picture>
+            <div class="coach__info">
+              <p class="coach__name">Анна Павлова</p>
+              <p class="coach__type">CrossFit</p>
+              <ul class="coach__advantages-list">
+                <li class="coach__advantages-item">Certified Level 3 Trainer</li>
+                <li class="coach__advantages-item">Победитель чемпионата России по CrossFit</li>
+                <li class="coach__advantages-item">Опыт — 6 лет</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
       <div class="coach__btn swiper-button-prev"></div>
       <div class="coach__btn swiper-button-next"></div>
     </div>
-  </section> -->
+  </section>
 
   <section class="advantages">
     <div class="advantages__wrapper">
